// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TraceTree FromTrace assembles tree from trace 1`] = `
"
trace root
  transaction - transaction.op
    transaction - transaction.op
"
`;

exports[`TraceTree FromTrace if parent span does not exist in span tree, the transaction stays under its previous parent 1`] = `
"
trace root
  span.op - span.description
  root - transaction.op
    child - transaction.op
"
`;

exports[`TraceTree FromTrace inserts orphan error 1`] = `
"
trace root
  transaction - transaction.op
    transaction - transaction.op
  error
"
`;

exports[`TraceTree FromTrace sorts by start_timestamp 1`] = `
"
trace root
  first - transaction.op
  last - transaction.op
"
`;

exports[`TraceTree appendTree appending extends trace space 1`] = `
"
trace root
  transaction - transaction.op
    transaction - transaction.op
  transaction - transaction.op
"
`;

exports[`TraceTree appendTree appends tree to end of current tree 1`] = `
"
trace root
  transaction - transaction.op
    transaction - transaction.op
  transaction - transaction.op
    transaction - transaction.op
"
`;
